Atualizações de tradução

--- a/views/default/contact.html
+++ b/views/default/contact.html
@@ -7,6 +7,7 @@
                     <hr>                     
                 </div>
                 <div class="span12 well form-project m_left">  
+                    <h3>{{=T("Complete the form to contact us")}}</h3>
                     <form action="{{=URL()}}" enctype="multipart/form-data" method="post" >
                       <p>
                         <label for="name">{{=T("Name")}}:</label>
