--- a/views/default/user.html
+++ b/views/default/user.html
@@ -24,7 +24,7 @@
                     <input type="checkbox" class="remember" name="remember" checked >{{=T("Remember me")}}    
                   </p>
                   <p>
-                    <a href="{{=URL(c='user', f='request_password', args='request_reset_password')}}">{{=T("Lost my password")}}</a>
+                    <a href="{{=URL(c='user', f='request_password', args='request_reset_password')}}">{{=T("I forgot my password")}}</a>
                   </p>
                   <p>
                     <input type="submit" value="Efetuar login" class="btn btn-warning">
