--- a/views/project/project_send.html
+++ b/views/project/project_send.html
@@ -9,7 +9,7 @@
               </section>
               <section>
                 <div class="span12 well form-project">
-                  <h3>{{=T("Fill the form for send your project")}}</h3>
+                  <h3>{{=T("Complete the form to submit your project")}}</h3>
                   {{=form_project.custom.begin}}
                     <div class="span6">
                       <p>
