--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -143,7 +143,7 @@
                 </div>
                 <div id="your-credits" class="tab-pane">
                   <div class="span12">
-                    <h3>{{=T("You have")}} <span class="credits">{{=T("R$")}} {{=("%.2f" % total_credit)}}</span> {{=T("in crédits")}}.</h3>
+                    <h3>{{=T("You have a")}} <span class="credits">{{=T("R$")}} {{=("%.2f" % total_credit)}}</span> {{=T("credit")}}.</h3>
                   </div>
                 </div>
               </div>
