--- a/views/adminpanel/list_actives_projects.html
+++ b/views/adminpanel/list_actives_projects.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Active Projects")}}</h1>
-            <p>Here are listed all active projects</p>
+            <p>{{=T("Here are listed all active projects")}}</p>
           </div>
           <div class="container-fluid">
             {{=grid}}
