--- a/views/project/project_send.html
+++ b/views/project/project_send.html
@@ -47,7 +47,7 @@
                         {{=form_project.custom.widget.twitter}}
                       </p>
                       <p>
-                        <label for="project_video">{{=T("ID of the video in vimeo.com")}}:</label>
+                        <label for="project_video">{{=T("Video ID on vimeo.com")}}:</label>
                         {{=form_project.custom.widget.video}}
                       </p>
                       <p>
