--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -39,8 +39,8 @@
             </div>
           </section>
           <section>
-            <div class="span12 well">  
-              <div class="row-fluid tab-content side-project">
+            <div class="span12 well projeto_pronto">  
+              <div class="row-fluid tab-content side-project ">
                 <div id="your-data" class="tab-pane  active">
                   <p class="alert">
                     {{=T("Your data will not be publicly visible. Only when you support a project is that the project owner will receive your email and your information to provide the rewards later. We also need some information if you have registered any project.")}}
