--- a/views/adminpanel/index.html
+++ b/views/adminpanel/index.html
@@ -2,7 +2,7 @@
 
         <div class="span9">
           <div class="container-fluid well">
-            <h1>Admin Panel</h1>
+            <h1>{{=T("Admin Panel")}}</h1>
             <p>{{=T("Use the left side menu to manage the system and the registered projects.")}}</p>
           </div>
           <div class="row-fluid">
