--- a/views/default/contact.html
+++ b/views/default/contact.html
@@ -26,7 +26,7 @@
                         <textarea name="message" id="message" cols="52" rows="10" class="span6"></textarea>
                       </p>
                       <p>
-                      <button type="submit" name="Submit" class="btn btn-warning"/>{{=T("Send message")}}</button>
+                      <button type="submit" name="Submit" class="btn btn-large btn-warning"/>{{=T("Send message")}}</button>
                       </p>
                     </form>
                 </div>
