--- a/views/default/index.html
+++ b/views/default/index.html
@@ -7,7 +7,7 @@
                   </div>  
               </section>
               <section>
-                <div class="span12">
+                <div class="span12 home_title">
                     <h1>{{=T("Collecting")}}</h1>
                     <hr>                     
                 </div>
