--- a/views/project/project_updates.html
+++ b/views/project/project_updates.html
@@ -5,7 +5,7 @@
             <div class="span12">
                 <h1>
                   {{=T("Project Updates")}}
-                  <a class="btn a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
+                  <a class="btn btn-warning a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
                 </h1>
                 <hr>
             </div>
