--- a/views/user/profile_complete.html
+++ b/views/user/profile_complete.html
@@ -5,18 +5,18 @@
             <div class="span12">
                 <h1>{{=T("Complet you profile")}}</h1>
                 <hr>
-            </div>
+            </div>                         
+            <div class="row-fluid">
+              <div class="span12 nav-profile">
+                <ul class="nav nav-tabs">
+                  <li class="active">
+                    <a href="#update-content" data-toggle="tab">{{=T("Your info")}}</a>
+                  </li>
+                </ul>         
+              </div>
           </section>
           <section>
-            <div class="span12 well">                 
-              <div class="row-fluid">
-                <div class="span12 nav-profile">
-                  <ul class="nav nav-tabs">
-                    <li class="active">
-                      <a href="#update-content" data-toggle="tab">{{=T("Your info")}}</a>
-                    </li>
-                  </ul>         
-                </div>
+            <div class="span12 well projeto_pronto"> 
                 <div class="row-fluid tab-content side-project">
                   <p class="alert">
                     {{=T("To submit your project, we need you to enter or confirm some data.")}}
