--- a/views/user/profile_edit.html
+++ b/views/user/profile_edit.html
@@ -16,7 +16,7 @@
               </div>
           </section>
           <section>
-            <div class="span12 well">  
+            <div class="span12 well projeto_pronto">  
                 <div class="row-fluid tab-content side-project">
                   <div id="update-content" class="tab-pane  active">
                       {{=form_profile_edit.custom.begin}}
