Outros ajustes visuais

--- a/views/default/not_autorized.html
+++ b/views/default/not_autorized.html
@@ -6,8 +6,10 @@
                     <h1>{{=T("Not Autorized")}}</h1>
                     <hr>                     
                 </div>
-                <div class="span12 well">  
+                <div class="span12 well m_left">                  
+                  <div class="span4 offset4">
                     <img src="{{=URL('static', 'images/not_autorized.png')}}">
+                  </div>
                 </div>
               </section>           
             </div>           
