--- a/views/install/index.html
+++ b/views/install/index.html
@@ -4,7 +4,7 @@
               <section>
                 <div class="span12">
                     <h1>{{=T("System Install")}}</h1>
-                    <p>Set here the admin system data</p>
+                    <p>{{=T("Set here the admin system data")}}</p>
                     <hr>
                   </div>
               </section>
