--- a/views/project/moip_return.html
+++ b/views/project/moip_return.html
@@ -3,11 +3,11 @@
             <div class="row-fluid">  
               <section>
                 <div class="span12">
-                    <h1>Doação Recebida</h1>
+                    <h1>{{=T("Donation Received")}}</h1>
                     <hr>                     
                 </div>
-                <div class="span12 well form-project">
-                    <p class="alert alert-success">Obrigado pela sua doação, assim que ela for liberada pelo MoIP será creditada para o projeto.</p>
+                <div class="span12 well form-project m_left">
+                    <p class="alert alert-success">{{=T("Thank you for your donation, once it is released by MoIP will be credited to the project.")}}</p>
                 </div>
               </section>           
             </div>           
