--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,6 +107,9 @@ ul.help_project {left: auto; right: 0px !important;}
 
 .projeto_pronto {border-top: 0px !important; border-top-left-radius: 0px !important; border-top-right-radius: 0px !important; -webkit-box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important; -moz-box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important; box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important;}
 
+.navbar .brand img {height: 60px;}
+
+
 .modal-body {
   background:#FFFFFF!important;
 }
