--- a/views/project/project_reward_edit.html
+++ b/views/project/project_reward_edit.html
@@ -3,20 +3,23 @@
         <div class="row-fluid">  
           <section>
             <div class="span12">
-                <h1>{{=T("Edit the Reward")}}</h1>
+                <h1>
+                  {{=T("Edit the Reward")}}
+                   <a class="btn btn-warning a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
+                </h1>
                 <hr>
-            </div>
+            </div>                        
+            <div class="row-fluid">
+              <div class="span12 nav-profile">
+                <ul class="nav nav-tabs">
+                  <li class="active">
+                    <a href="#new-reward" data-toggle="tab">{{=T("Edit the reward")}}</a>
+                  </li>
+                </ul>         
+              </div>
           </section>
           <section>
-            <div class="span12 well">                 
-              <div class="row-fluid">
-                <div class="span12 nav-profile">
-                  <ul class="nav nav-tabs">
-                    <li class="active">
-                      <a href="#new-reward" data-toggle="tab">{{=T("Edit the Reward")}}</a>
-                    </li>
-                  </ul>         
-                </div>
+            <div class="span12 well projeto_pronto">  
                 <div class="row-fluid  tab-content">
                   <div id="new-reward" class="tab-pane active">
                       {{=form_project_reward_edit.custom.begin}}
