--- a/views/user/profile_edit.html
+++ b/views/user/profile_edit.html
@@ -3,7 +3,10 @@
         <div class="row-fluid">  
           <section>
             <div class="span12">
-                <h1>Atualizar Perfil</h1>
+                <h1>
+                  {{=T("Update Profile")}}
+                  <a class="btn btn-warning a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
+                </h1>
                 <hr>
             </div>                       
             <div class="row-fluid">
