--- a/views/project/project_updates.html
+++ b/views/project/project_updates.html
@@ -8,26 +8,26 @@
                   <a class="btn btn-warning a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
                 </h1>
                 <hr>
+            </div>                          
+            <div class="row-fluid">
+                <p>
+                  {{=T("Use this space to update your backers on the progress of your project")}}.
+                </p>
             </div>
+            <div class="row-fluid">
+              <div class="span12 nav-profile">
+                <ul class="nav nav-tabs">
+                  <li class="active">
+                    <a href="#list-updates" data-toggle="tab">{{=T("Updates")}}</a>
+                  </li>
+                  <li>
+                    <a href="#update-content" data-toggle="tab">{{=T("New update")}}</a>
+                  </li>
+                </ul>         
+              </div>
           </section>
           <section>
-            <div class="span12 well">                 
-              <div class="row-fluid">
-                  <p>
-                    {{=T("Use this space to update your backers on the progress of your project")}}.
-                  </p>
-              </div>
-              <div class="row-fluid">
-                <div class="span12 nav-profile">
-                  <ul class="nav nav-tabs">
-                    <li class="active">
-                      <a href="#list-updates" data-toggle="tab">{{=T("Updates")}}</a>
-                    </li>
-                    <li>
-                      <a href="#update-content" data-toggle="tab">{{=T("New update")}}</a>
-                    </li>
-                  </ul>         
-                </div>
+            <div class="span12 well projeto_pronto">
                 <div class="row-fluid tab-content side-project">
                   <div id="list-updates" class="tab-pane active">
                     <table class="table table-bordered table-striped refund">
