--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,10 +104,9 @@ ul.help_project {left: auto; right: 0px !important;}
 .nav-tabs>li>a:hover{background: #aa6f88 !important; border-color:#aa6f88 #aa6f88 #c4c4c4 !important; color: #fef5d6 !important;}
 
 .alert {color: #703d2b !important;}
-
 .projeto_pronto {border-top: 0px !important; border-top-left-radius: 0px !important; border-top-right-radius: 0px !important; -webkit-box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important; -moz-box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important; box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.05) !important;}
-
 .navbar .brand img {height: 60px;}
+.btn-payment {margin-top: 20px;}
 
 
 .modal-body {
