--- a/views/project/project_update_edit.html
+++ b/views/project/project_update_edit.html
@@ -8,18 +8,18 @@
                   <a class="btn btn-warning a-return" href="{{=URL(c='user', f='profile')}}">{{=T("Back")}}</a>
                 </h1>
                 <hr>
-            </div>
+            </div>     
+            <div class="row-fluid">
+              <div class="span12 nav-profile">
+                <ul class="nav nav-tabs">
+                  <li class="active">
+                    <a href="#update-content" data-toggle="tab">{{=T("Edit updates")}}</a>
+                  </li>
+                </ul>         
+              </div>
           </section>
           <section>
-            <div class="span12 well">                 
-              <div class="row-fluid">
-                <div class="span12 nav-profile">
-                  <ul class="nav nav-tabs">
-                    <li class="active">
-                      <a href="#update-content" data-toggle="tab">{{=T("Edit Updates")}}</a>
-                    </li>
-                  </ul>         
-                </div>
+            <div class="span12 well projeto_pronto"> 
                 <div class="row-fluid tab-content side-project">
                   <div id="update-content" class="tab-pane  active">
                       {{=form_update_edit.custom.begin}}
