--- a/views/adminpanel/config_website_email.html
+++ b/views/adminpanel/config_website_email.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Website Email Settings")}}</h1>
-            <p>Put here your settings to send emails</p>
+            <p>{{=T("Put here your settings to send emails")}}.</p>
           </div>
           <div class="container-fluid well">
             {{=form}}
