--- a/views/adminpanel/config_website_images.html
+++ b/views/adminpanel/config_website_images.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Website Images")}}</h1>
-            <p>Set here your images</p>
+            <p>{{=T("Set here your images")}}.</p>
           </div>
           <div class="container-fluid well">
             <p>
