--- a/views/adminpanel/config_website_info.html
+++ b/views/adminpanel/config_website_info.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Website Info")}}</h1>
-            <p>Put here your site infos</p>
+            <p>{{=T("Put here your site info")}}.</p>
           </div>
           <div class="container-fluid well">
             {{=form}}
