--- a/views/adminpanel/config_website_payment.html
+++ b/views/adminpanel/config_website_payment.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Website Payment Settings")}}</h1>
-            <p>Put here your payment settings</p>
+            <p>{{=T("Put here your payment settings")}}.</p>
           </div>
           <div class="container-fluid well">
             {{=form}}
