--- a/views/adminpanel/list_pending_projects.html
+++ b/views/adminpanel/list_pending_projects.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Pending Projects.")}}</h1>
-            <p>Here are listed all the projects that are awaiting approval</p>
+            <p>{{=T("Here are listed all the projects that are awaiting for approval")}}.</p>
           </div>
           <div class="row-fluid">
             {{=grid}}
