--- a/views/adminpanel/list_all_projects.html
+++ b/views/adminpanel/list_all_projects.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("All Projects.")}}</h1>
-            <p>Here are listed all the projects registered in the system</p>
+            <p>{{=T("Here are listed all the projects registered on the system")}}</p>
           </div>
           <div class="container-fluid">
             {{=grid}}
