--- a/views/adminpanel/list_expired_projects.html
+++ b/views/adminpanel/list_expired_projects.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Expired Projects.")}}</h1>
-            <p>Here are listed all the projects we have completed the period of funding</p>
+            <p>{{=T("Here are listed all the projects that completed the period of funding")}}.</p>
           </div>
           <div class="row-fluid">
             {{=grid}}
